--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework==3.1.2
 factory-boy==2.5.2
 fake-factory==0.5.1
 Markdown==2.6.2
+pytz==2015.4
 requests==2.7.0
 six==1.9.0
 wheel==0.24.0
