--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ django-enumfield==1.2.1
 django-extensions==1.5.5
 django-extras==0.3
 django-filter==0.10.0
+django-rest-swagger==0.3.2
 djangorestframework==3.1.2
 factory-boy==2.5.2
 fake-factory==0.5.1
 Markdown==2.6.2
 pytz==2015.4
+PyYAML==3.11
 requests==2.7.0
 six==1.9.0
 wheel==0.24.0
