--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ djangorestframework==3.1.2
 factory-boy==2.5.2
 fake-factory==0.5.1
 Markdown==2.6.2
+Pillow==2.9.0
 pytz==2015.4
 PyYAML==3.11
 requests==2.7.0
