--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-rest-swagger==0.3.2
 djangorestframework==3.1.2
 factory-boy==2.5.2
 fake-factory==0.5.1
+gunicorn==19.3.0
 Markdown==2.6.2
 Pillow==2.9.0
 pytz==2015.4
