--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-extras==0.3
 django-filter==0.10.0
 django-rest-swagger==0.3.2
 djangorestframework==3.1.2
+drf-nested-routers==0.9.0
 factory-boy==2.5.2
 fake-factory==0.5.1
 gunicorn==19.3.0
