--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ fake-factory==0.5.1
 gunicorn==19.3.0
 Markdown==2.6.2
 Pillow==2.9.0
+psycopg2==2.6.1
 pytz==2015.4
 pyyaml==3.11
 requests==2.7.0
