--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-enumfield==1.2.1
 django-extensions==1.5.5
 django-extras==0.3
 django-filter==0.10.0
+django-nose==1.4.3
 django-rest-swagger==0.3.2
 django==1.8.2
 djangorestframework==3.2.2
@@ -17,10 +18,12 @@ factory-boy==2.5.2
 fake-factory==0.5.1
 gunicorn==19.3.0
 Markdown==2.6.2
+nose==1.3.7
+pep8==1.7.0
 Pillow==2.9.0
 psycopg2==2.6.1
 pytz==2015.4
-pyyaml==3.11
+PyYAML==3.11
 requests==2.7.0
 six==1.9.0
 wheel==0.24.0
