--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ drf-nested-routers==0.9.0
 factory-boy==2.5.2
 fake-factory==0.5.1
 gunicorn==19.3.0
+JSON-log-formatter==0.0.2
 Markdown==2.6.2
 nose==1.3.7
 pep8==1.7.0
