chore(pep8): Pep8 Compliance

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,5 @@ before_script:
  - python manage.py collectstatic --noinput
 script:
  - python manage.py test
+ - pep8 ozp ozpcenter ozpiwc plugins plugins_util --ignore=E501,E123,E128,E121,E124,E711,E402 --exclude=ozpcenter/scripts/* --show-source
+
