--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,9 @@ django-extensions==1.5.5
 django-extras==0.3
 django-filter==0.10.0
 django-nose==1.4.3
-djangorestframework==3.2.2
+django-redis==4.4.3
 django-rest-swagger==0.3.2
+djangorestframework==3.2.2
 drf-nested-routers==0.9.0
 factory-boy==2.5.2
 fake-factory==0.5.1
@@ -17,6 +18,7 @@ gunicorn==19.3.0
 JSON-log-formatter==0.0.2
 Markdown==2.6.2
 mccabe==0.4.0
+mockredispy==2.9.3
 nose==1.3.7
 pep8==1.7.0
 Pillow==2.9.0
@@ -24,6 +26,7 @@ psycopg2==2.6.1
 pyflakes==1.0.0
 pytz==2015.4
 PyYAML==3.11
+redis==2.10.5
 requests==2.7.0
 six==1.9.0
 wheel==0.24.0
