--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ JSON-log-formatter==0.0.2
 Markdown==2.6.2
 mccabe==0.4.0
 mockredispy==2.9.3
+msgpack-python==0.4.7
 nose==1.3.7
 pep8==1.7.0
 Pillow==2.9.0
