--- a/requirements.txt
+++ b/requirements.txt
@@ -29,4 +29,4 @@ redis==2.10.5
 requests==2.7.0
 six==1.9.0
 wheel==0.24.0
-django-cas-client==1.2.0
+-e git+https://github.com/chazzlabs/django-cas#egg=django-cas-client
