--- a/requirements.txt
+++ b/requirements.txt
@@ -29,4 +29,4 @@ redis==2.10.5
 requests==2.7.0
 six==1.9.0
 wheel==0.24.0
--e git+http://dev1.vistronix.com:9080/ozp/django-cas#egg=django-cas-client
+-e git+http://dev1.vistronix.com:9080/ozp/django-cas.git#egg=django-cas-client
