Added Debian Linux installation instructions to README. Added two more IntelliJ files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ env
 .idea/dictionaries
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
+.idea/compiler.xml
+.idea/misc.xml
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
