--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-redis==4.4.3
 django-rest-swagger==0.3.2
 djangorestframework==3.2.2
 drf-nested-routers==0.9.0
+elasticsearch==2.4.0
 factory-boy==2.5.2
 fake-factory==0.5.1
 flake8==2.5.4
