--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ mccabe==0.4.0
 mockredispy==2.9.3
 msgpack-python==0.4.7
 nose==1.3.7
+Pillow==2.9.0
+psycopg2==2.6.1
 pep8==1.7.0
 pyflakes==1.0.0
 pytz==2015.4
