--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-autopep8==1.2.2
+#autopep8==1.2.2
 coverage==4.0.3
 Django==1.8.2
 django-cors-headers==1.1.0
@@ -30,4 +30,4 @@ requests==2.7.0
 six==1.9.0
 wheel==0.24.0
 django-decorator-include==1.1
--e git+http://dev1.vistronix.com:9080/ozp/django-cas.git#egg=django-cas-client
+django-cas-client==1.2.0
