--- a/requirements.txt
+++ b/requirements.txt
@@ -30,4 +30,4 @@ requests==2.7.0
 six==1.9.0
 wheel==0.24.0
 django-decorator-include==1.1
--e git+http://dev1.vistronix.com:9080/ozp/django-cas.git#egg=django-cas-client
+-e git+http://dev1.vistronix.com:9080/ozp/django-cas.git#egg=django-cas-client-ozp
