--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: python
 python:
   - "3.4"
 # command to install dependencies
-install: 
+install:
   - pip install -r requirements.txt
 # command to run tests
 before_script:
@@ -14,6 +14,4 @@ before_script:
  - python manage.py collectstatic --noinput
 script:
  - python manage.py test
- - flake8 ozp ozpcenter ozpiwc plugins plugins_util --ignore=E501,E123,E128,E121,E124,E711,E402 --exclude=ozpcenter/scripts/* --show-source
-
-
+ - flake8 ozp ozpcenter ozpiwc plugins plugins_util --ignore=E501,E123,E128,E121,E124,E711,E402 --show-source
