--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+amqp==2.1.4
+appdirs==1.4.3
 autopep8==1.2.2
+billiard==3.5.0.2
+celery==4.0.2
 coverage==4.0.3
 Django==1.8.2
 django-cors-headers==1.1.0
@@ -16,18 +20,22 @@ factory-boy==2.5.2
 fake-factory==0.5.1
 flake8==2.5.4
 gunicorn==19.3.0
+kombu==4.0.2
 Markdown==2.6.2
 mccabe==0.4.0
 mockredispy==2.9.3
 msgpack-python==0.4.7
 nose==1.3.7
+packaging==16.8
 pep8==1.7.0
 Pillow==2.9.0
 psycopg2==2.6.1
 pyflakes==1.0.0
+pyparsing==2.2.0
 pytz==2015.4
 PyYAML==3.11
 redis==2.10.5
 requests==2.7.0
 six==1.9.0
-wheel==0.24.0
+urllib3==1.20
+vine==1.1.3
