--- a/ozpcenter/scripts/test_data/profile.yaml
+++ b/ozpcenter/scripts/test_data/profile.yaml
@@ -44,7 +44,7 @@
   email: wsmith@oceania.gov
   groups: [ORG_STEWARD]
   organizations: [Ministry of Truth]
-  stewarded_organizations: [Test, Test 1, Ministry of Truth, Test 2, Test 3, Test 4]
+  stewarded_organizations: [Ministry of Truth]
   username: wsmith
 - access_control:
     clearances: [UNCLASSIFIED, CONFIDENTIAL, SECRET, TOP SECRET]
@@ -248,7 +248,7 @@
   email: bettafish@oceania.gov
   groups: [APPS_MALL_STEWARD, BETA_USER]
   organizations: [Ministry of Love]
-  stewarded_organizations: []
+  stewarded_organizations: [Test, Test 1, Ministry of Truth, Test 2, Test 3, Test 4]
   username: bettafish
 - access_control:
     clearances: [UNCLASSIFIED, CONFIDENTIAL, SECRET, TOP SECRET]
