fix(travis-ci): Fixed hang

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ install:
 before_script:
  - mkdir -p media
  - mkdir -p static
- - python manage.py migrate --noinput
+ - DEV_MODE=True python manage.py migrate --noinput
  - python manage.py collectstatic --noinput
 script:
  - flake8 ozp ozpcenter ozpiwc plugins plugins_util --ignore=E501,E123,E128,E121,E124,E711,E402 --show-source
- - python manage.py test
+ - DEV_MODE=True python manage.py test
