refactor(sample_data): Finished fixing unit test

--- a/ozpcenter/scripts/test_data/categories.yaml
+++ b/ozpcenter/scripts/test_data/categories.yaml
@@ -1,4 +1,6 @@
 categories:
+- description: Accessories Description
+  title: Accessories
 - description: Things made of paper
   title: Books and Reference
 - description: For making money
