--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+env:
+  - ES_VERSION=2.4.6 ES_DOWNLOAD_URL=https://download.elastic.co/elasticsearch/release/org/elasticsearch/distribution/tar/elasticsearch/${ES_VERSION}/elasticsearch-${ES_VERSION}.tar.gz
 services:
   - redis-server
 language: python
@@ -6,6 +8,9 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - wget ${ES_DOWNLOAD_URL}
+  - tar -xzf elasticsearch-${ES_VERSION}.tar.gz
+  - ./elasticsearch-${ES_VERSION}/bin/elasticsearch &
 # command to run tests
 before_script:
  - mkdir -p media
@@ -13,5 +18,6 @@ before_script:
  - DEV_MODE=True python manage.py migrate --noinput
  - python manage.py collectstatic --noinput
 script:
+ - wget -q --waitretry=1 --retry-connrefused -T 10 -O - http://127.0.0.1:9200
  - flake8 ozp ozpcenter ozpiwc plugins plugins_util --ignore=E501,E123,E128,E121,E124,E711,E402 --show-source
  - DEV_MODE=True python manage.py test
